Simplify Dockerfile, no need to change permissions of index path

--- a/5.2/openjdk-jre8/Dockerfile
+++ b/5.2/openjdk-jre8/Dockerfile
@@ -9,9 +9,7 @@ ENV ILSERVER_ILIASDATA_PATH=iliasdata
 ENV ILSERVER_INDEX_PATH=/var/lucenedata/ilias
 ENV ILSERVER_PROPERTIES_PATH=ilServer.properties
 
-RUN mkdir -p ${ILSERVER_DATA_PATH} ${ILSERVER_ILIASDATA_PATH} ${ILSERVER_INDEX_PATH} \
-    && chown www-data:root ${ILSERVER_INDEX_PATH} \
-    && chmod 775 ${ILSERVER_INDEX_PATH}
+RUN mkdir -p ${ILSERVER_DATA_PATH} ${ILSERVER_ILIASDATA_PATH} ${ILSERVER_INDEX_PATH}
 VOLUME ${ILSERVER_INDEX_PATH}
 
 ENV ILIAS_VERSION=5.2.22
