Introduce variable ILSERVER_PORT and expose port

--- a/5.2/openjdk-jre8/Dockerfile
+++ b/5.2/openjdk-jre8/Dockerfile
@@ -2,6 +2,7 @@ FROM openjdk:8-jre
 
 WORKDIR /app
 
+ENV ILSERVER_PORT=11111
 ENV ILSERVER_JAR=Services/WebServices/RPC/lib/ilServer.jar
 
 ENV ILSERVER_DATA_PATH=data
@@ -11,6 +12,8 @@ ENV ILSERVER_PROPERTIES_PATH=ilServer.properties
 
 RUN mkdir -p ${ILSERVER_DATA_PATH} ${ILSERVER_ILIASDATA_PATH} ${ILSERVER_INDEX_PATH}
 VOLUME ${ILSERVER_INDEX_PATH}
+
+EXPOSE $ILSERVER_PORT
 
 ENV ILIAS_VERSION=5.2.22
 ENV ILIAS_SHA1=c480e0617a87e2e6b4bbbcb94ff6046c030043bb
