--- a/5.1/openjdk-jre8/Dockerfile
+++ b/5.1/openjdk-jre8/Dockerfile
@@ -2,6 +2,7 @@ FROM openjdk:8-jre
 
 WORKDIR /app
 
+ENV ILSERVER_PORT=11111
 ENV ILSERVER_JAR=Services/WebServices/RPC/lib/ilServer.jar
 
 ENV ILSERVER_DATA_PATH=data
@@ -11,6 +12,8 @@ ENV ILSERVER_PROPERTIES_PATH=ilServer.properties
 
 RUN mkdir -p ${ILSERVER_DATA_PATH} ${ILSERVER_ILIASDATA_PATH} ${ILSERVER_INDEX_PATH}
 VOLUME ${ILSERVER_INDEX_PATH}
+
+EXPOSE $ILSERVER_PORT
 
 ENV ILIAS_VERSION=5.1.28
 ENV ILIAS_SHA1=20a99f8a44dba773fbc008f7585ac75fe3eb14b3
