Reuse Dockerfiles for different java versions

--- a/5.2/Dockerfile
+++ b/5.2/Dockerfile
@@ -1,4 +1,6 @@
-FROM openjdk:8-jre
+ARG JAVA_VERSION
+
+FROM openjdk:${JAVA_VERSION}
 
 WORKDIR /app
 
@@ -15,8 +17,8 @@ VOLUME ${ILSERVER_INDEX_PATH}
 
 EXPOSE $ILSERVER_PORT
 
-ENV ILIAS_VERSION=5.3.13
-ENV ILIAS_SHA1=da29084ae12c38f29ec732661487c5510132b2fd
+ENV ILIAS_VERSION=5.2.22
+ENV ILIAS_SHA1=c480e0617a87e2e6b4bbbcb94ff6046c030043bb
 
 RUN curl -o ilias.tar.gz -SL https://github.com/ILIAS-eLearning/ILIAS/archive/v${ILIAS_VERSION}.tar.gz \
     && echo "$ILIAS_SHA1 *ilias.tar.gz" | sha1sum -c - \
