--- a/5.4/Dockerfile
+++ b/5.4/Dockerfile
@@ -1,5 +1,7 @@
 ARG JAVA_VERSION
 
+FROM sturai/ilias:5.4 AS ilias
+
 FROM openjdk:${JAVA_VERSION}
 
 WORKDIR /app
@@ -17,15 +19,7 @@ VOLUME ${ILSERVER_INDEX_PATH}
 
 EXPOSE $ILSERVER_PORT
 
-ENV ILIAS_VERSION=5.4.2
-ENV ILIAS_SHA1=9ec1c2cef0809c33a3911906aa9b8bf9b81ddb0a
-
-RUN curl -o ilias.tar.gz -SL https://github.com/ILIAS-eLearning/ILIAS/archive/v${ILIAS_VERSION}.tar.gz \
-    && echo "$ILIAS_SHA1 *ilias.tar.gz" | sha1sum -c - \
-    && tar -xzf ilias.tar.gz --strip-components=1 --wildcards \
-        */${ILSERVER_JAR} \
-        */*/*/*.xml \
-    && rm ilias.tar.gz
+COPY --from=ilias /var/www/html/ ./
 
 COPY docker-ilserver-entrypoint /usr/local/bin/
 
