Switch base image from openjdk to eclipse-temurin
See https://github.com/docker-library/openjdk/issues/505

--- a/7/Dockerfile
+++ b/7/Dockerfile
@@ -3,7 +3,7 @@ ARG ILIAS_BRANCH
 
 FROM srsolutions/ilias:${ILIAS_BRANCH} AS ilias
 
-FROM openjdk:${JAVA_VERSION}
+FROM eclipse-temurin:${JAVA_VERSION}
 
 WORKDIR /app
 
